# quantum-course-assignments

./: .gitignore  CMakeLists.txt
hw3/: CMakeLists.txt  DJ_Algorithm.cpp  Grover_Algorithm.cpp  HHL_Algorithm.cpp  answer.md  answer.org  qft.cpp  qft_10_origin_ir_homework.txt  qft_10_origin_ir_qpanda.txt
hw3/originIR/: DJAlg_origin_ir.txt  HHL_alg_origin_ir_1.txt  grover_alg_origin_ir_1.txt
